<resources>


    <!-- configuration & system strings #########################################################-->
    <string name="app_name">Petimo</string>
    <string name="preference_file_settings">de.tud.nhd.PREFERENCE_FILE_SETTINGS</string>
    <string name="preference_file_monitor">de.tud.nhd.PREFERENCE_FILE_MONITOR</string>


    <string name="drawer_open">Drawer Opened</string>
    <string name="drawer_close">Drawer Closed</string>
    <!-- Please adapt MainActivity after changing this array ! -->
    <string-array name="navigation_titles">
        <item>Monitored Tasks</item>
        <item>Statistics</item>
        <item>Manage Tasks</item>
        <item>Settings</item>
        <!-- <item>Demo</item> -->
    </string-array>

    <string-array name="priorities">
        <item>Lowest</item>
        <item>Low</item>
        <item>Normal</item>
        <item>High</item>
        <item>Highest</item>
    </string-array>


    <!-- The content (and order) of this array must be identical with the one in PetimoController-->
    <string-array name="languages">
        <item>English</item>
        <item>German</item>
        <item>Vietnamese</item>
    </string-array>

    <!-- Menu ############################################################################-->
    <!-- Navigation Drawer -->
    <string name="menu_monitor">Monitor</string>
    <string name="menu_monitored_task">Monitored Task</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_manage_tasks">Manage Tasks</string>
    <string name="menu_settings">Settings</string>


    <!-- Short text ######################################################################-->
    <string name="text_sum">Sum</string>

    <!-- Short text with colon ###########################################################-->
    <string name="colon_category">Category:</string>
    <string name="colon_task">Task:</string>
    <string name="colon_priority">Priority:</string>
    <string name="colon_new_category">New Category:</string>
    <string name="colon_new_task">New Task:</string>
    <string name="colon_name">Name:</string>
    <string name="colon_start_time">Start time:</string>
    <string name="colon_recent_monitors">Recent monitors:</string>
    <string name="colon_date">Date:</string>
    <string name="colon_from">From:</string>
    <string name="colon_to">To:</string>
    <string name="colon_start_at">Start at:</string>
    <string name="colon_started_at">Started at:</string>
    <string name="colon_stop_at">Stop at:</string>
    <string name="colon_language">Language:</string>


    <!-- Common button text -->
    <string name="button_stop_monitor">Stop Monitor</string>
    <string name="button_start_monitor">Start Monitor</string>
    <string name="button_execute_demo">Execute Demo</string>

    <string name="button_start">Start</string>
    <string name="button_ok">OK</string>
    <string name="button_yes">Yes</string>
    <string name="button_create">Create</string>

    <string name="button_cancel">Cancel</string>
    <string name="button_no">No</string>
    <string name="button_back"> Back </string>

    <string name="button_new_category">&#160;New Category</string>
    <string name="button_new_task">New Task</string>
    <string name="button_new_block">New Block</string>
    <string name="button_add_block">Add Block</string>


    <string name="button_show">Show</string>

    <string name="button_clear">Clear</string>

    <string name="button_edit">Edit</string>


    <!-- Titles #################################################################################-->
    <string name="title_new_monitor_block">New Monitor Block</string>
    <string name="title_new_category">New Category</string>
    <string name="title_remove_category">Remove Category</string>
    <string name="title_edit_category">Edit Category</string>
    <string name="title_new_task">New Task</string>
    <string name="title_remove_task">Remove Task</string>
    <string name="title_edit_task">Edit Task</string>
    <string name="title_remove_block">Remove Block</string>
    <string name="title_clear_monitored_task_list">Clear Saved Monitored Task List</string>
    <string name="title_start_monitor">Start Monitor?</string>
    <string name="title_stop_monitor">Stop Monitor?</string>
    <string name="title_select_start_time">Select Start Time</string>
    <string name="title_select_stop_time">Select Stop Time</string>
    <string name="title_select_tasks_to_display">Select Task To Display</string>

    <!-- Redundant titles make the UI so nestedly complicated
    <string name="title_monitor">Monitor</string>
    <string name="title_monitored_tasks">Monitored Tasks</string>
    <string name="title_manage_tasks">Manage Tasks</string>
    <string name="title_monitoring">Monitoring</string> -->

    <string name="title_monitor"></string>
    <string name="title_monitored_tasks">History</string>
    <string name="title_manage_tasks"></string>
    <string name="title_monitoring"></string>

    <!-- Messages ###############################################################################-->
    <string name="message_confirm_stop_monitor">Stop the monitor?</string>
    <string name="message_confirm_start_monitor">To be monitored:</string>
    <string name="message_confirm_remove">Are you sure to remove&#160;</string>
    <string name="message_confirm_clear_monitored_task_list">List of monitored tasks can help you
        choosing task faster. Clearing this list does not affect your monitor data. Are you sure you
        want to clear it?</string>
    <string name="message_invalid_start_time">Invalid start time! Chosen time is in the future
    or before the last stop time.</string>
    <string name="message_invalid_stop_time">Invalid stop time! Chosen time is in the future or
        before the start time.</string>
    <string name="message_invalid_manual_start_time">Invalid start time! Chosen time already belongs
    to a monitor block.</string>
    <string name="message_invalid_manual_stop_time">Invalid time interval!</string>
    <string name="message_no_manual_start_time">Please select a start time first.</string>
    <string name="message_block_added">Monitor Block added.</string>


    <!-- Option text ############################################################################-->
    <string name="option_most_recently_first">Most recently first</string>
    <string name="option_most_frequently_first">Most frequently first</string>

    <string name="option_show_selected_tasks">Show selected tasks</string>
    <string name="option_show_empty_days">Show empty days</string>
    <string name="option_remember">Remember</string>
    <string name="option_swipe_to_delete">Swipe to delete</string>

    <string name="option_grouped_by_task">Grouped by task</string>
    <string name="option_grouped_by_category">Grouped by category</string>
    <string name="option_not_grouped">Not grouped</string>

    <string name="option_task_statistics">Task statistics</string>
    <string name="option_cat_statistics">Categories statistics</string>
    <string name="option_show_selected_categories">Show selected categories</string>
    <string name="option_show_sum_line">Show sum line</string>
    <string name="option_enable_pinch_zoom">Enable pinch zoom</string>


    <!-- Other strings ##########################################################################-->
    <string name="nothing_text">...</string>
    <string name="hello_blank_fragment">Under construction</string>


    <!-- Main Screen strings ####################################################################-->
    <string name="slide_to_start">» Start »</string>
    <string name="slide_to_stop">« Stop «</string>
    <string name="select_task">Select Task</string>
    <string name="start_at">Start At</string>
    <string name="stop_at">Stop At</string>
    <string name="now">Now</string>


    <!-- Symbols ################################################################################-->
    <string name="symbol_sigma">Σ:</string>

    <!-- Individual Strings #####################################################################-->

    <!-- ModeOffFragment -->
    <string-array name="spinner_default">
        <item>No data</item>
    </string-array>

    <!-- Settings -->
    <string name="settings_ov_threshold">New day starts at:</string>
    <string name="settings_am">&#160; a.m.</string>
    <string-array name="settings_ov_threshold_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_admin">AdminActivity</string>


    <string name="love">LOVE DIUUU!!!  D loves M</string>
</resources>
