<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/colorAccent"
    tools:context="de.tud.nhd.petimo.view.fragments.ModeOffMenuFragment">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="80">
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:text="@string/option_most_recently_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:id="@+id/radioButtonTime" />

            <RadioButton
                android:text="@string/option_most_frequently_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/radioButton"
                android:id="@+id/radioButtonFreq" />
        </RadioGroup>
    </LinearLayout>


    <Button
        android:id="@+id/buttonClear"
        android:text="@string/button_clear"
        android:layout_weight="20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_alignParentRight="true"/>



</LinearLayout>
