<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_primary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



        <LinearLayout
            android:id="@+id/menu_content"
            android:background="@color/background_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/middle_large_pane_padding"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio_tasks"
                    android:textSize="@dimen/middle_big_text_size"
                    android:text="@string/option_task_statistics"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layoutDirection="rtl"
                    android:layout_gravity="start"
                    android:textAlignment="textStart"/>

                <RadioButton
                    android:id="@+id/radio_cats"
                    android:textSize="@dimen/middle_big_text_size"
                    android:text="@string/option_cat_statistics"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layoutDirection="rtl"
                    android:layout_gravity="start"
                    android:textAlignment="textStart"/>

            </RadioGroup>

            <Switch
                android:id="@+id/switch_only_selected"
                android:textSize="@dimen/middle_big_text_size"
                android:text="@string/option_show_selected_tasks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/pane_padding"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/pane_padding"
                android:background="@color/background_title"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/pane_padding"
                android:background="@color/background_title_highlight"/>

            <!-- DatePickers -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/colon_from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/sub_pane_padding"/>
                <Button
                    android:text="@string/loading_text"
                    android:background="@android:color/transparent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_date_from" />
                <TextView
                    android:text="@string/colon_to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/sub_pane_padding" />
                <Button
                    android:text="@string/loading_text"
                    android:background="@android:color/transparent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_date_to" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


</LinearLayout>