<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_primary">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/option_show_selected_tasks"
            android:textSize="@dimen/big_text_size"
            android:layout_margin="@dimen/middle_large_pane_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"/>

        <Switch
            android:id="@+id/switch_selected_tasks"
            android:layout_margin="@dimen/middle_large_pane_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/option_show_empty_days"
            android:textSize="@dimen/big_text_size"
            android:layout_margin="@dimen/middle_large_pane_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"/>

        <Switch
            android:id="@+id/switch_show_empty_days"
            android:layout_margin="@dimen/middle_large_pane_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/option_swipe_to_delete"
            android:textSize="@dimen/big_text_size"
            android:layout_margin="@dimen/middle_large_pane_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"/>

        <Switch
            android:id="@+id/switch_swipe_to_delete"
            android:layout_margin="@dimen/middle_large_pane_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>



</LinearLayout>