<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:padding="@dimen/large_pane_padding"
    tools:context="de.tud.nhd.petimo.view.fragments.menu.PetimoStatisticsMenu">


    <!-- The Floating Menu at the bottom-->
    <android.support.v7.widget.CardView
        android:id="@+id/statistics_menu"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        card_view:cardBackgroundColor="@android:color/transparent"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="4dp"
        android:scrollbars="none"
        android:clickable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <LinearLayout
                android:id="@+id/menu_content"
                android:background="@color/background_primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/middle_large_pane_padding"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio_tasks"
                        android:textSize="@dimen/middle_big_text_size"
                        android:text="@string/option_task_statistics"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layoutDirection="rtl"
                        android:layout_gravity="start"
                        android:textAlignment="textStart"/>

                    <RadioButton
                        android:id="@+id/radio_cats"
                        android:textSize="@dimen/middle_big_text_size"
                        android:text="@string/option_cat_statistics"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layoutDirection="rtl"
                        android:layout_gravity="start"
                        android:textAlignment="textStart"/>

                </RadioGroup>

                <Switch
                    android:id="@+id/switch_only_selected"
                    android:textSize="@dimen/middle_big_text_size"
                    android:text="@string/option_show_selected_tasks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/pane_padding"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/pane_padding"
                    android:background="@color/background_title"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="@dimen/pane_padding"
                    android:background="@color/background_title_highlight"/>

                <!-- DatePickers -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/colon_from"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/sub_pane_padding"/>
                    <Button
                        android:text="@string/loading_text"
                        android:background="@android:color/transparent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/button_date_from" />
                    <TextView
                        android:text="@string/colon_to"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/sub_pane_padding" />
                    <Button
                        android:text="@string/loading_text"
                        android:background="@android:color/transparent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/button_date_to" />
                </LinearLayout>

            </LinearLayout>


            <RelativeLayout
                android:id="@+id/menu_button_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_primary">
                <ImageButton
                    android:id="@+id/menu_button"
                    android:background="@drawable/ic_exit_to_app_black_36dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


            </RelativeLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>
